<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_trans"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/skyblue" />

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/profile_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/myprofile"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llBookigs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/booking_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/mybooking"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/workout_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/workouts"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llABoutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/about_us_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/loc_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCreateBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/booking_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/createbook"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/contact_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <ImageView

                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/logout_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>