<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/car"
        android:scaleType="fitXY" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:background="@drawable/bg_trans" />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AuthenticationModule.Login.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/signup1"
                android:textColor="@color/white"
                android:textSize="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="23px"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/welcomeback"

                android:textColor="@color/white"
                android:textSize="27dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="23px"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/entercredentials"
                android:textColor="@color/white"

                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/emailusername"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/eye_icon" />


            </RelativeLayout>

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/forgotpass"
                android:textColor="@color/white"
                android:textSize="13dp" />


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="195dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/text_corrner_radios"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/signin1"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/ForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/orsign"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivFb"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/fb_icon" />

                <ImageView
                    android:id="@+id/ivGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/google_icon" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlLoginLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">
        <include layout="@layout/loader_layout"/>

    </RelativeLayout>

</RelativeLayout>