<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:background="@drawable/car" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_trans"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="Create New Password"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/new_pasrd_diferent"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/username"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/eye_icon" />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/confpass"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etconfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/username"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/eye_icon" />


            </RelativeLayout>

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="195dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/text_corrner_radios"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlLoader2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">
        <include layout="@layout/loader_layout"/>

    </RelativeLayout>

</RelativeLayout>