<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".About.About">

    <include layout="@layout/header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ImageView
            android:layout_width="410dp"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            android:src="@drawable/about_car" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="AWATFIT"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/await"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/awatt"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="15sp"
            android:textColor="@color/gray2"
            android:text="THE AWAT STORY"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="5dp"
            android:src="@drawable/await"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:text="@string/awat" />

    <LinearLayout

        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/about_button"
            android:fontFamily="@font/poppins_medium"
            android:text="Try A Class"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="13sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10sp"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="100dp"
            android:src="@drawable/await"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/training"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/yellow"
            android:textSize="16sp"/>

    </LinearLayout>

    </LinearLayout>

    </RelativeLayout>

    </ScrollView>


</LinearLayout>